--- a/build.gradle
+++ b/build.gradle
@@ -39,10 +39,12 @@ group 'org.cubenetwork.api'
 version '1.0'
 
 dependencies {
-    compileOnly "org.bukkit:bukkit:${bukkitVersion}"
+
+    compileOnly "org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT"
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
 
+    compile "net.md-5:bungeecord-chat:1.16-R0.1"
     // Logging
     compile group: 'io.github.microutils', name: 'kotlin-logging', version: '1.7.9'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
@@ -52,6 +54,8 @@ dependencies {
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'
 
 
+// https://mvnrepository.com/artifact/com.google.guava/guava
+    compile group: 'com.google.guava', name: 'guava', version: '15.0'
 
 
     // Refelctions
